--- a/pearson.html
+++ b/pearson.html
@@ -12,13 +12,22 @@
       padding: 0;
       background-color: #f5f7fa;
       color: #222;
-      font-size: 18px;
+      font-size: 19px;
     }
     header {
       background-color: #004b8d;
       color: white;
-      padding: 30px;
+      padding: 25px 15px;
       text-align: center;
+    }
+    header h1 {
+      font-size: 40px;
+      margin-bottom: 10px;
+    }
+    header p {
+      font-size: 22px;
+      font-weight: 500;
+      margin: 0;
     }
     section {
       padding: 30px 20px;
@@ -26,27 +35,30 @@
       margin: auto;
     }
     h1, h2 {
-      color: #004b8d;
-      font-size: 28px;
+      color: #002b5c;
+      font-size: 30px;
+      margin-bottom: 10px;
     }
     h3 {
-      font-size: 22px;
+      font-size: 24px;
+      color: #004b8d;
     }
     p, li {
-      font-size: 18px;
+      font-size: 19px;
+      color: #222;
     }
     code {
       background-color: #eef;
       padding: 2px 6px;
       display: inline-block;
       margin: 10px 0;
-      font-size: 16px;
+      font-size: 17px;
     }
     pre {
       background-color: #eef;
       padding: 15px;
       overflow-x: auto;
-      font-size: 16px;
+      font-size: 17px;
     }
     img {
       max-width: 100%;
@@ -56,11 +68,11 @@
       width: 100%;
       border-collapse: collapse;
       margin-top: 20px;
-      font-size: 16px;
+      font-size: 17px;
     }
     table, th, td {
       border: 1px solid #ccc;
-      padding: 8px;
+      padding: 10px;
       text-align: center;
     }
     footer {
@@ -68,14 +80,14 @@
       color: white;
       text-align: center;
       padding: 20px 0;
-      font-size: 16px;
+      font-size: 17px;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Pearson Correlation</h1>
-    <p>Understanding the linear relationship between two continuous variables</p>
+    <p><strong>Understanding the linear relationship between two continuous variables</strong></p>
   </header>
 
   <section>
