--- a/pearson.html
+++ b/pearson.html
@@ -170,6 +170,104 @@ plt.show()</code></pre>
     <p>A Pearson correlation coefficient close to +1 indicates a strong positive linear relationship between years of experience and monthly salary. This means as experience increases, salary tends to increase almost perfectly linearly.</p>
     <p>The p-value confirms statistical significance if it is less than 0.05.</p>
   </section>
+ <section>
+    <h2>Applications of Pearson Correlation in IT</h2>
+
+    <h3>1. User Behavior Analysis</h3>
+    <p>Correlation between session time and number of clicks. This helps understand if users who stay longer also engage more. It’s useful in improving UI/UX for websites and apps.</p>
+    <table>
+      <tr><th>Session Time (min)</th><th>Clicks</th></tr>
+      <tr><td>5</td><td>12</td></tr>
+      <tr><td>7</td><td>18</td></tr>
+      <tr><td>3</td><td>7</td></tr>
+      <tr><td>8</td><td>20</td></tr>
+      <tr><td>4</td><td>10</td></tr>
+    </table>
+
+    <h3>2. Server Load vs Response Time</h3>
+    <p>Used to analyze how increasing server load impacts response time. This helps in infrastructure scaling and server optimization.</p>
+    <table>
+      <tr><th>Load (%)</th><th>Response Time (ms)</th></tr>
+      <tr><td>20</td><td>150</td></tr>
+      <tr><td>35</td><td>200</td></tr>
+      <tr><td>50</td><td>250</td></tr>
+      <tr><td>60</td><td>300</td></tr>
+      <tr><td>70</td><td>350</td></tr>
+    </table>
+
+    <h3>3. Commits vs Bugs Reported</h3>
+    <p>Helps in evaluating how frequent changes in code (commits) relate to bugs. It can be used to assess developer performance or project quality.</p>
+    <table>
+      <tr><th>Commits</th><th>Bugs</th></tr>
+      <tr><td>10</td><td>3</td></tr>
+      <tr><td>15</td><td>5</td></tr>
+      <tr><td>20</td><td>8</td></tr>
+      <tr><td>25</td><td>10</td></tr>
+      <tr><td>30</td><td>12</td></tr>
+    </table>
+
+    <h3>4. App Crashes vs User Rating</h3>
+    <p>Correlation here helps in identifying how app crashes negatively affect user satisfaction. Useful for QA and product improvement.</p>
+    <table>
+      <tr><th>Crashes</th><th>Rating</th></tr>
+      <tr><td>5</td><td>3</td></tr>
+      <tr><td>2</td><td>4</td></tr>
+      <tr><td>7</td><td>2</td></tr>
+      <tr><td>1</td><td>5</td></tr>
+      <tr><td>4</td><td>3</td></tr>
+    </table>
+
+    <h3>5. User A vs User B Ratings</h3>
+    <p>Used in recommendation systems to match user interests. High correlation means similar preferences — useful in collaborative filtering.</p>
+    <table>
+      <tr><th>User A</th><th>User B</th></tr>
+      <tr><td>4</td><td>5</td></tr>
+      <tr><td>3</td><td>3</td></tr>
+      <tr><td>5</td><td>4</td></tr>
+      <tr><td>2</td><td>2</td></tr>
+      <tr><td>1</td><td>1</td></tr>
+    </table>
+
+    <h3>6. Feature vs Target</h3>
+    <p>Important in machine learning feature selection. Features highly correlated with the target are often more useful in building predictive models.</p>
+    <table>
+      <tr><th>Feature</th><th>Target</th></tr>
+      <tr><td>10</td><td>15</td></tr>
+      <tr><td>14</td><td>21</td></tr>
+      <tr><td>18</td><td>27</td></tr>
+      <tr><td>22</td><td>33</td></tr>
+      <tr><td>26</td><td>39</td></tr>
+    </table>
+
+    <h3>7. Login Attempts by Hour</h3>
+    <p>Useful in cybersecurity to identify attack patterns. More logins during certain hours may indicate potential threats.</p>
+    <table>
+      <tr><th>Attempts</th><th>Hour</th></tr>
+      <tr><td>5</td><td>1</td></tr>
+      <tr><td>10</td><td>5</td></tr>
+      <tr><td>20</td><td>7</td></tr>
+      <tr><td>15</td><td>9</td></tr>
+      <tr><td>8</td><td>13</td></tr>
+    </table>
+
+    <h3>8. Hours on Task vs Project Delay</h3>
+    <p>This shows whether the amount of effort is aligned with delays. Can help project managers allocate resources more effectively.</p>
+    <table>
+      <tr><th>Hours Spent</th><th>Delay (days)</th></tr>
+      <tr><td>10</td><td>1</td></tr>
+      <tr><td>15</td><td>3</td></tr>
+      <tr><td>20</td><td>4</td></tr>
+      <tr><td>18</td><td>3</td></tr>
+      <tr><td>22</td><td>5</td></tr>
+    </table>
+
+  </section>
+
+  <footer>
+    &copy; 2025 Judah Mathematics & IT Research & Institution. All rights reserved.
+  </footer>
+</body>
+</html>
 
   <footer>
     &copy; 2025 Judah Mathematics & IT Research & Institution
