--- a/pearson.html
+++ b/pearson.html
@@ -104,7 +104,8 @@
 
   <section>
     <h2>Example Data</h2>
-    <p><strong>Scenario:</strong> Analyze the correlation between years of experience and monthly salary (in thousands).</p>
+    <p><strong>Scenario:</strong> How can we analyze the correlation between years of experience and monthly salary to support HR decision-making in recruitment and compensation planning?
+      Analyze the correlation between years of experience and monthly salary (in thousands).</p>
     <pre>X = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
 Y = [30, 35, 38, 42, 45, 48, 52, 56, 60, 64]</pre>
 
