--- a/index.html
+++ b/index.html
@@ -124,13 +124,15 @@
       <p><strong>Example:</strong> Experience vs Salary in IT field</p>
     </div>
 
-    <div class="formula-block">
-      <h3>2. Spearman Rank Correlation</h3>
-      <img src="spearman_formula.png" alt="Spearman Formula">
-      <p><strong>Variables:</strong> d - difference between ranks of X and Y</p>
-      <p><strong>Use When:</strong> Data is ordinal or ranked, and relationship is monotonic.</p>
-      <p><strong>Example:</strong> Product rating rank vs number of returns</p>
-    </div>
+   
+  <div class="formula-block">
+    <h3><a href="spearman.html" target="_blank" style="color:#004b8d; text-decoration:none;">2. Spearman Rank Correlation</a></h3>
+    <img src="spearman_formula.png" alt="Spearman Formula">
+    <p><strong>Variables:</strong> d - difference between ranks of X and Y</p>
+    <p><strong>Use When:</strong> Data is ordinal or ranked, and relationship is monotonic.</p>
+    <p><strong>Example:</strong> Product rating rank vs number of returns</p>
+  </div>
+
 
     <div class="formula-block">
       <h3>3. Kendall Tau Correlation</h3>
