--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
    
   <div class="formula-block">
-    <h3><a href="spearman.html" target="_blank" style="color:#004b8d; text-decoration:none;">2. Spearman Rank Correlation</a></h3>
+    <h3><a href="spearman_formula.html" target="_blank" style="color:#004b8d; text-decoration:none;">2. Spearman Rank Correlation</a></h3>
     <img src="spearman_formula.png" alt="Spearman Formula">
     <p><strong>Variables:</strong> d - difference between ranks of X and Y</p>
     <p><strong>Use When:</strong> Data is ordinal or ranked, and relationship is monotonic.</p>
