--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <a href="#programs">Programs</a>
   <a href="#research">Research</a>
   <a href="#correlation">Correlation Types</a>
-  <a href="lineslo[pe.html"> LINE&SLOPE</a> 
+  <a href="lineslope.html"> Line & Slope</a> 
   <a href="tfidf_example.html">TF-IDF Example</a>
   <a href="naive_bayes.html" style="font-weight:bold; font-size:1.1em;">
     Scikit-learn’s MultinomialNB & Naive Bayes Formula
